--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -154,4 +154,8 @@
         <item name="android:clipToPadding">false</item>
         <item name="android:paddingTop">12dp</item>
     </style>
+
+    <style name="SwitchTextAppearance" parent="Hedvig.TextAppearance.Body2">
+        <item name="android:textColor">@color/textColorThird</item>
+    </style>
 </resources>
