Center align sub title and add horizontal padding

--- a/app/src/main/res/layout/view_multi_action_component.xml
+++ b/app/src/main/res/layout/view_multi_action_component.xml
@@ -31,7 +31,8 @@
             android:id="@+id/subtitle"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:gravity="center_vertical"
+            android:paddingHorizontal="@dimen/base_margin_double"
+            android:gravity="center"
             android:textAppearance="?textAppearanceCaption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
