--- a/app/src/main/res/layout/dialog_change_start_date.xml
+++ b/app/src/main/res/layout/dialog_change_start_date.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/base_margin_double"
     android:paddingTop="@dimen/base_margin"
-    android:paddingBottom="@dimen/base_margin_triple"
+    android:paddingBottom="@dimen/base_margin"
     tools:context=".feature.offer.ui.changestartdate.ChangeDateBottomSheet">
 
     <ImageView
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_triple"
         android:gravity="center"
         android:text="@string/OFFER_SET_START_DATE"
         android:textAppearance="?textAppearanceHeadline5" />
@@ -59,12 +59,13 @@
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/auto_set_date_switch"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin"
+        android:layout_marginTop="@dimen/base_margin_half"
         android:text="@string/OFFER_PLAN_EXIRES_TEXT"
+        android:textColor="@color/textColorSecondary"
         app:switchPadding="@dimen/base_margin_triple"
-        app:switchTextAppearance="@style/SwitchTextAppearance" />
+        app:switchTextAppearance="?textAppearanceBody2" />
 
     <Button
         android:id="@+id/chooseDateButton"
@@ -72,7 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_quintuple"
+        android:layout_marginTop="@dimen/base_margin_double"
         android:text="@string/general_save_button" />
 
 </LinearLayout>
