--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -52,20 +52,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/premium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?textAppearanceHeadline3"
-                    tools:text="179 kr/month" />
+                    tools:text="179" />
 
                 <TextView
+                    android:layout_gravity="center"
                     android:id="@+id/premiumPeriod"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/OFFER_PREMIUM_PERIOD_ABBREVIATION"
+                    android:text="@string/OFFER_COST_AND_PREMIUM_PERIOD_ABBREVIATION"
                     android:textAppearance="?textAppearanceSubtitle1"
                     android:textColor="@color/gray" />
 
