--- a/app/src/main/res/layout/offer_fact_area.xml
+++ b/app/src/main/res/layout/offer_fact_area.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:colorBackground"
@@ -32,13 +31,11 @@
         android:paddingStart="@dimen/base_margin_double"
         android:paddingEnd="@dimen/base_margin_double">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <LinearLayout
             android:id="@+id/expandableContent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="false"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            android:layout_height="match_parent"
+            android:orientation="vertical" />
 
     </com.hedvig.app.ui.view.ExpandableContentView>
 
