--- a/app/src/main/res/layout/offer_fact_area.xml
+++ b/app/src/main/res/layout/offer_fact_area.xml
@@ -35,7 +35,8 @@
             android:id="@+id/expandableContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/base_margin_quintuple" />
 
     </com.hedvig.app.ui.view.ExpandableContentView>
 
