--- a/app/src/main/res/layout/list_text_item.xml
+++ b/app/src/main/res/layout/list_text_item.xml
@@ -1,31 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/base_margin_double"
-    android:layout_marginVertical="@dimen/base_margin_and_a_half">
+    android:layout_marginVertical="@dimen/base_margin_and_a_half"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.5"
         android:textAppearance="?textAppearanceBody1"
-        app:layout_constraintEnd_toStartOf="@id/value"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="Address" />
 
     <TextView
         android:id="@+id/value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.5"
         android:gravity="end"
         android:textAppearance="?textAppearanceBody1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/label"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="Askergatan 112 B" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
