--- a/app/src/main/res/drawable/fade_out_gradient.xml
+++ b/app/src/main/res/drawable/fade_out_gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="270"
-        android:endColor="?colorSurface"
+        android:endColor="?android:colorBackground"
         android:startColor="@color/transparent" />
     <corners
         android:bottomLeftRadius="@dimen/hedvig_card_view_radius"
