--- a/app/src/main/res/layout/expandable_content_view.xml
+++ b/app/src/main/res/layout/expandable_content_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
-    <com.google.android.material.card.MaterialCardView
+    <FrameLayout
         android:id="@+id/expandableContentContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,13 +21,14 @@
 
     <Button
         android:id="@+id/expandableContentToggle"
-        style="?attr/materialButtonContainedLargeStyle"
-        android:layout_width="match_parent"
+        style="?materialButtonOutlinedStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin_quadruple"
         android:text="@string/OFFER_HOUSE_SUMMARY_BUTTON_EXPAND"
-        android:theme="@style/Hedvig.Button.Large"
+        app:icon="@drawable/ic_dropdown_rotate"
+        app:iconPadding="@dimen/base_margin"
         app:layout_constraintBottom_toBottomOf="@id/expandableContentContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
