--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -13,11 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
+        android:paddingBottom="120dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:itemCount="1"
-        tools:listitem="@layout/offer_header"
-        tools:paddingTop="?attr/actionBarSize" />
+        tools:listitem="@layout/offer_header" />
 
     <Button
         android:id="@+id/signButton"
