--- a/app/src/main/res/layout/offer_terms_area.xml
+++ b/app/src/main/res/layout/offer_terms_area.xml
@@ -52,6 +52,6 @@
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="2"
-        tools:listitem="@layout/offer_terms_area_button" />
+        tools:listitem="@layout/document" />
 
 </LinearLayout>
