--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/base_margin_septuple"
     android:paddingBottom="@dimen/base_margin_quadruple"
+    android:background="@drawable/gradient_summer_sky"
     tools:context=".feature.offer.ui.OfferActivity">
 
     <com.google.android.material.card.MaterialCardView
